integ-tests/tests/snapshots/parser__table_names-2.snap
---
source: integ-tests/tests/parser.rs
expression: spans
---
note[table]: root_"
  ┌─ table_names:4:1
  │  
4 │ ╭ ["\""]
5 │ │ ['a.a']
  │ ╰^

note[table]: root_""
  ┌─ table_names:6:1
  │  
6 │ ╭ ['""']
7 │ │ 
  │ ╰^

note[table]: root_a_b
  ┌─ table_names:1:1
  │  
1 │ ╭ [a."b"]
2 │ │ ["f f"]
  │ ╰^

note[table]: root_a
  ┌─ table_names:1:1
  │  
1 │ ╭ [a."b"]
2 │ │ ["f f"]
  │ ╰^

note[table]: root_a.a
  ┌─ table_names:5:1
  │  
5 │ ╭ ['a.a']
6 │ │ ['""']
  │ ╰^

note[table]: root_f f
  ┌─ table_names:2:1
  │  
2 │ ╭ ["f f"]
3 │ │ ["f.f"]
  │ ╰^

note[table]: root_f.f
  ┌─ table_names:3:1
  │  
3 │ ╭ ["f.f"]
4 │ │ ["\""]
  │ ╰^

note[table]: root
  ┌─ table_names:1:1
  │  
1 │ ╭ [a."b"]
2 │ │ ["f f"]
3 │ │ ["f.f"]
4 │ │ ["\""]
5 │ │ ['a.a']
6 │ │ ['""']
7 │ │ 
  │ ╰^
