integ-tests/tests/snapshots/parser__underscores-2.snap
---
source: integ-tests/tests/parser.rs
expression: spans
---
note[integer]: root_hundred
  ┌─ underscores:2:11
  │
2 │ hundred = 1_0_0
  │           ^^^^^

note[integer]: root_ten
  ┌─ underscores:1:7
  │
1 │ ten = 1_0
  │       ^^^

note[integer]: root_thousand
  ┌─ underscores:3:12
  │
3 │ thousand = 1_000
  │            ^^^^^

note[integer]: root_thousand-neg
  ┌─ underscores:5:15
  │
5 │ thousand-neg =-1_000
  │               ^^^^^^

note[integer]: root_thousand-pos
  ┌─ underscores:4:16
  │
4 │ thousand-pos = +1_000
  │                ^^^^^^

note[table]: root
  ┌─ underscores:1:1
  │  
1 │ ╭ ten = 1_0
2 │ │ hundred = 1_0_0
3 │ │ thousand = 1_000
4 │ │ thousand-pos = +1_000
5 │ │ thousand-neg =-1_000
6 │ │ 
  │ ╰^


